@@ -2765,12 +2765,17 @@ void GEplayDisplayList(pGEDevDesc dd)
 	    SEXP theOperation = CAR(theList);
 	    SEXP op = CAR(theOperation);
 	    SEXP args = CADR(theOperation);
-	    PRIMFUN(op) (R_NilValue, op, args, R_NilValue);
-	    /* Check with each graphics system that the plotting went ok
-	     */
-	    if (!GEcheckState(dd)) {
-		plotok = 0;
-		warning(_("display list redraw incomplete"));
+	    if (TYPEOF(op) == BUILTINSXP || TYPEOF(op) == SPECIALSXP) {
+	    	PRIMFUN(op) (R_NilValue, op, args, R_NilValue);
+		/* Check with each graphics system that the plotting went ok
+		 */
+		if (!GEcheckState(dd)) {
+		    warning(_("display list redraw incomplete"));
+		    plotok = 0;
+		}
+	    } else {
+	    	warning(_("invalid display list"));
+	    	plotok = 0;
 	    }
 	    theList = CDR(theList);
 	}
